# discord-ipc-rust

./: .env.example  Cargo.toml  README.md
examples/: simple.rs
src/: ipc.rs  ipc_socket.rs  lib.rs  opcodes.rs  utils.rs
src/models/: mod.rs
src/models/receive/: commands.rs  data.rs  events.rs  mod.rs
src/models/send/: args.rs  command.rs  commands.rs  events.rs  mod.rs
src/models/shared/: channel.rs  guild.rs  message.rs  mod.rs  user.rs  voice.rs  voice_settings.rs
