[package]
name = "discord-ipc-rust"
version = "0.1.4"
authors = [
    "Hacksore <996134+Hacksore@users.noreply.github.com>",
    "Adel-ak <adelkerow@gmail.com>",
    "zihadmahiuddin",
    "sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>",
    "Deftu"
]
edition = "2021"
description = "Cross-platform crate for interfacing with the Discord client locally via RPC"
readme = "README.md"
repository = "https://github.com/Deftu/discord-ipc-rust"
license = "MIT"
keywords = ["discord", "ipc", "RPC", "client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", features = ["preserve_order"] }
serde_with = "3.16.0"
serde_repr = "0.1.19"
uuid = { version = "0.8", features = ["v4"] }
tokio = { version = "1.21.1", features = ["full"] }
thiserror = "1.0.37"
# TODO: we don't need this as a hard dep
dotenv = "0.15.0"
