[package]
name = "discord-ipc-rust"
version = "0.1.4"
authors = [
    "Hacksore <996134+Hacksore@users.noreply.github.com>",
    "Adel-ak <adelkerow@gmail.com>",
    "zihadmahiuddin",
    "sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>",
    "Deftu",
    "nekename"
]
edition = "2024"
description = "Cross-platform crate for interfacing with the Discord client locally via RPC"
readme = "README.md"
repository = "https://github.com/nekename/discord-ipc-rust"
license = "MIT"
keywords = ["discord", "ipc", "RPC", "client"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_with = "3.16"
serde_repr = "0.1.20"
uuid = { version = "1.18", features = ["v4"] }
tokio = { version = "1.48", features = ["full"] }
thiserror = "1.0"

[dev-dependencies]
dotenv = "0.15"
